Fixed: Post-Button too close to Create-Post-Box

--- a/frontend/src/app/user/user-thread-view/user-thread-view.component.scss
+++ b/frontend/src/app/user/user-thread-view/user-thread-view.component.scss
@@ -29,6 +29,7 @@
 
 .thread-card {
   max-width: 70%;
+  min-width: 600px;
   font-size: 20px !important;
   box-shadow: none !important;
   background-color: transparent;
